--- a/main.css
+++ b/main.css
@@ -3,6 +3,29 @@ header{
   text-align: center;
 }
 
+header{
+  padding:32px;
+}
 header img{
   border-radius: 50%;
+}
+
+h1{
+  margin: 0;
+  margin-top: 24px;
+  font-weight: normal;
+}
+p{
+  margin:0;
+}
+
+main{
+  text-align: center;
+  display: block;
+}
+
+.container{
+margin: 0 auto;
+width: 400px;
+text-align: left;
 }
