--- a/256/06機密文書を作ってみよう/css/styles.css
+++ b/256/06機密文書を作ってみよう/css/styles.css
@@ -31,3 +31,12 @@ h1 {
 p {
   line-height: 1.6;
 }
+span{
+  background: black;
+}
+
+span.click{
+  background: white;
+  color: red;
+  font-weight: bold;
+}
