--- a/ドットインストール/フレックスボックス/style.css
+++ b/ドットインストール/フレックスボックス/style.css
@@ -1,7 +1,11 @@
-
+html{
+  height: 100%;
+}
 body{
   margin: 0;
-
+  height: 100%;
+display: flex;
+flex-direction: column;
 }
 
 header{
@@ -9,6 +13,7 @@ header{
 }
 .container{
   display: flex;
+  flex: 1;
 }
 main{
   background: red;
