--- a/256/書いて覚えるメディアクエリー/02デスクトップファーストでスタイルを切り替えよう/css/styles.css
+++ b/256/書いて覚えるメディアクエリー/02デスクトップファーストでスタイルを切り替えよう/css/styles.css
@@ -2,16 +2,19 @@ h1{
   font-size: 64px;
   color: red;
 }
-@media (max-width:800px){
+p{
+  font-size: 16px;
+}
+@media (max-width:799px){
   h1{
     font-size: 32px;
     color: green;
   }
 }
 
-@media (max-width:600px){
+@media (max-width:599px){
   h1{
-    font-size: 32px;
+    font-size: 16px;
     color: blue;
   }
 }
