--- a/256/なおして学ぶWebデザイン Vol.1/02記事のカードをデザインしてみよう/css/styles.css
+++ b/256/なおして学ぶWebデザイン Vol.1/02記事のカードをデザインしてみよう/css/styles.css
@@ -1,29 +1,37 @@
-.item{
-  width: 480px;
-  position: relative;
-  background: pink;
-  text-align: center;
-  margin: 16px;
-}
+/* 自由に編集してください */
 
 
 .title{
+  font-size: 16px;
   position: absolute;
-  bottom: 30px;
+  bottom: 40px;
+  left:16px;
+  color: white;
+  background: rgba(00,00,00,0.4);
+  /* display: inline-block; */
+  padding: 6px 6px 0;
+  border-radius: 3px;
+}
+.description{
+  position: absolute;
+  bottom: 10px;
+  left: 16px;
+  font-size: 14px;
+  color: white;
+  background: rgba(00,00,00,0.4);
+  display: block;
+  padding: 6px 6px 0;
+  border-radius: 3px;
+}
+.item{
+  width: 480px;
+  position: relative;
+  margin: 16px auto;
+  list-style: none;
 }
 
 img{
-  /* transform: scale( 1.6 ); */
-  display: inline-block;
-
+  width: 480px;
 }
 
 
-.description{
-  position: absolute;
-  bottom: 16px;
-}
-
-li{
-
-}
