--- a/256/なおして学ぶWebデザイン Vol.1/02記事のカードをデザインしてみよう/css/styles.css
+++ b/256/なおして学ぶWebデザイン Vol.1/02記事のカードをデザインしてみよう/css/styles.css
@@ -1,37 +1,76 @@
-/* 自由に編集してください */
-
-
-.title{
-  font-size: 16px;
-  position: absolute;
-  bottom: 40px;
-  left:16px;
-  color: white;
-  background: rgba(00,00,00,0.4);
-  /* display: inline-block; */
-  padding: 6px 6px 0;
-  border-radius: 3px;
+* {
+  box-sizing: border-box;
 }
-.description{
-  position: absolute;
-  bottom: 10px;
-  left: 16px;
-  font-size: 14px;
-  color: white;
-  background: rgba(00,00,00,0.4);
-  display: block;
-  padding: 6px 6px 0;
-  border-radius: 3px;
+
+img {
+  vertical-align: bottom;
 }
-.item{
-  width: 480px;
-  position: relative;
-  margin: 16px auto;
+
+body {
+  display: flex;
+  min-height: 100vh;
+  margin: 0;
+  padding: 48px 0;
+  align-items: center;
+  justify-content: center;
+  color: #555;
+}
+
+.postList {
   list-style: none;
-}
-
-img{
+  padding: 0;
   width: 480px;
 }
-
-
+.postList__item + .postList__item {
+  margin-top: 32px;
+}
+.postList__link {
+  display: block;
+  position: relative;
+  border-radius: 8px;
+  overflow: hidden;
+  transition: opacity 0.3s;
+}
+.postList__link:hover {
+  opacity: 0.8;
+}
+.postList__link:hover .postList__thumbnail-img {
+  transform: scale(1.1);
+}
+.postList__thumbnail {
+  object-fit: cover;
+  width: 100%;
+  height: auto;
+}
+.postList__thumbnail-img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  aspect-ratio: 16/9;
+  transition: transform 0.3s;
+}
+.postList__meta {
+  position: absolute;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.8);
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.3) 70%, rgba(0, 0, 0, 0) 100%);
+  color: #f8f8f8;
+  width: 100%;
+  padding: 32px 16px 16px;
+}
+.postList__title {
+  margin: 0;
+  font-size: 18px;
+  font-weight: normal;
+}
+.postList__date {
+  font-size: 12px;
+  margin-top: 8px;
+}
+.postList__date-icon {
+  display: inline-block;
+}
+.postList__date-text {
+  display: inline-block;
+  margin-left: 4px;
+}/*# sourceMappingURL=styles.css.map */
