--- a/256/なおして学ぶWebデザイン Vol.2/04/css/styles.css
+++ b/256/なおして学ぶWebデザイン Vol.2/04/css/styles.css
@@ -3,7 +3,11 @@
 }
 .container{
   margin: 0 auto;
+  width: 880px;
+  display: flex;
 }
-.item{
+div.item{
+  display: block;
   border: 1px solid black;
+  width: calc(( 100% - 32px) / 3);
 }
